--- a/persolist.html
+++ b/persolist.html
@@ -1,10 +1,10 @@
-<!Doctype html>
-<html>
-	<head>
-		<meta content = "text/html; charset = UTF-8" http-equiv = "content-type"/>
-		<meta http-equiv = "langage" content = "fr-FR"/>
+<!DOCTYPE html>
+<html content = "text/html" lang="fr-FR">
+  <head>
+    <meta charset = "UTF-8"/>
 		<meta name= "langage" content = "fr-FR"/>
-		<meta name = "description" content = "exemples javascript"/>
+		<meta name = "description" content = "Bienvenue sur ce site NON-Officiel de Genshin impact !"/>
+    <meta property="og:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 		<title>Genshin Wiki</title>
     <link rel = "shortcut icon" type = "image/x-icon" href = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Ffavicon.png?v=1614796154065"/>
     <link rel = "stylesheet" href = "css/style.css"/>
@@ -12,62 +12,129 @@
     <link rel = "preconnect" href = "https://fonts.gstatic.com"/>
     <link href = "https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel = "stylesheet"/>
     <link href = "https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400&display=swap" rel = "stylesheet"/>
-	</head>
-	<body>
+  </head>
+  <body>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="scripts/navigationbar.js"></script>
-    <div>
-      <center>
-        <a href = "index.html"><img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Flogo.png?v=1614543203182" alt = "Logo site" width = "100" height = "50"/></a>
-      </center>
+    <div class = "center">
+      <a href = "index.html"><img class = "center" src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Flogo.png?v=1614543203182" alt = "Logo site" width = "100" height = "50"/></a>
       <nav class = "navigation_nav">
-        <center>
-          <ul class = "navigation_ul">
-            <button class="navigation_button">🞬</button>
-            <li class = "navigation_list">
-              <a class = "navigation_a" href = "index.html">
-                <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fmaison.png?v=1614543202406" alt = "Logo Accueil"/>Accueil
-              </a>
-            </li>
-            <li class = "navigation_list">
-              <a class = "navigation_a" href = "news.html">
-                <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fplume.png?v=1614543202469" alt = "Logo News"/>News
-              </a>
-            </li>
-            <li class = "navigation_list">
-              <a class = "navigation_a" href = "persolist.html">
-                <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fpersonne.png?v=1614543202455" alt = "Logo Personnages"/>Personnages
-              </a>
-            </li>
-            <li class = "navigation_list">
-              <a class = "navigation_a" href = "tierlist.html">
-                <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fepee.png?v=1614543202643" alt = "Logo Tier List"/>Tier List
-              </a>
-            </li>
-            <li class = "navigation_list">
-              <a class = "navigation_a" href = "map.html">
-                <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2FLocation.png?v=1614543202406" alt = "Logo Map Interactive"/>Map Interactive
-              </a>
-            </li>
-            <li class = "navigation_list">
-              <a class = "navigation_a" href = "aboutus.html">
-                <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fi.png?v=1614543202406" alt = "Logo A propos"/>A propos
-              </a>
-            </li>
-          </ul>
-        </center>
+        <button class="navigation_button">🞬</button>
+        <ul class = "navigation_ul">
+          <li class = "navigation_list">
+            <a class = "navigation_a" href = "index.html">
+              <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fmaison.png?v=1614543202406" alt = "Logo Accueil"/>Accueil
+            </a>
+          </li>
+          <li class = "navigation_list">
+            <a class = "navigation_a" href = "news.html">
+              <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fplume.png?v=1614543202469" alt = "Logo News"/>News
+            </a>
+          </li>
+          <li class = "navigation_list">
+            <a class = "navigation_a" href = "persolist.html">
+              <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fpersonne.png?v=1614543202455" alt = "Logo Personnages"/>Personnages
+            </a>
+          </li>
+          <li class = "navigation_list">
+            <a class = "navigation_a" href = "cristaux.html">
+              <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fepee.png?v=1614543202643" alt = "Logo Cristaux"/>Cristaux              
+            </a>
+          </li>
+          <li class = "navigation_list">
+            <a class = "navigation_a" href = "map.html">
+              <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2FLocation.png?v=1614543202406" alt = "Logo Map Interactive"/>Map Interactive
+            </a>
+          </li>
+          <li class = "navigation_list">
+            <a class = "navigation_a" href = "aboutus.html">
+              <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fi.png?v=1614543202406" alt = "Logo A propos"/>A propos
+            </a>
+          </li>
+        </ul>
       </nav>
     </div>
-    <div
-      style="background: url('https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2F1105694.png?v=1614543205341');"
-    ></div>
-		<br>
-		<h2 class="text">Personnages -</h2>
-		<br>
-		<h2 class="text"><img src="img/anemo.png" height="25" width="25">Anémo</h2>
-		<br>
-		<ul>
-			<h4 class="text"><img src="img/aether.png" alt="Portait Aether" height="100" width="100">Aether</h4>
-		</ul>
+    <div class = "decalage">
+      <div style="background: url('https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2F1105694.png?v=1614543205341');"></div>
+		  <br>
+		  <h1 class="text">Personnages -</h1>
+		  <br>
+      <div>
+		    <h2 class="text"><img src="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fan%C3%A9mo.png?v=1616617609883" alt="Logo Anemo" height="25" width="25">Anémo</h2>
+		    <br>
+		    <ul class = "perso">
+          <div class = "image-text">
+            <img src="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Faether.png?v=1614543202670" alt="Portait Aether" height="100" width="100">
+			      <h4 class="text">Aether | Lumine </h4>
+            <h4 class="five_stars">★★★★★</h4>
+          </div>
+          <div class = "image-text">
+            <img src="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2FCharacter_Jean_Thumb.png?v=1616615479828" alt="Portait Jean" height="100" width="100">
+            <h4 class="text">Jean</h4>
+            <h4 class="five_stars">★★★★★</h4>
+          </div>
+          <div class = "image-text">
+            <img src="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2FCharacter_Venti_Thumb.png?v=1616615885333" alt="Portrait Venti" height="100" width="100">
+            <h4 class="text">Venti</h4>
+            <h4 class="five_stars">★★★★★</h4>
+          </div>
+          <div class = "image-text">
+            <img src="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2FCharacter_Xiao_Thumb%20(1).png?v=1616616875984" alt="Portrait Xiao" height="100" width="100">
+            <h4 class="text">Xiao</h4>
+            <h4 class="five_stars">★★★★★</h4>
+          </div>
+          <div class = "image-text">
+            <img src="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2FCharacter_Sucrose_Thumb%20(1).png?v=1616616822130" alt="Portrait Sucrose" height="100" width="100">
+            <h4 class="text">Sucrose</h4>
+            <h4 class="four_stars">★★★★✰</h4>
+          </div>
+		    </ul>
+      </div>
+      <div>
+        <h2 class="text"><img src="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fshow.png?v=1616617318199" alt="Logo Pyro" height="25" width="25">Pyro</h2>
+        <br>
+        <ul class="perso">
+          <div class = "image-text">
+            <img src="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2FCharacter_Diluc_Thumb.png?v=1616617106658" alt="Portrait Diluc" height="100" width="100">
+            <h4 class="text">Diluc</h4>
+            <h4 class="five_stars">★★★★★</h4>
+          </div>
+          <div class = "image-text">
+            <img src="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2FCharacter_Hu_Tao_Thumb.png?v=1616617111385" alt="Portrait Hu Tao" height="100" width="100">
+            <h4 class="text">Hu Tao</h4>
+            <h4 class="five_stars">★★★★★</h4>
+          </div>
+          <div class = "image-text">
+            <img src="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2FCharacter_Klee_Thumb.png?v=1616617116062" alt="Portrait Klee" height="100" width="100">
+            <h4 class="text">Klee</h4>
+            <h4 class="five_stars">★★★★★</h4>
+          </div>
+          <div class= "image-text">
+            <img src="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2FCharacter_Amber_Thumb.png?v=1616617102692" alt="Portrait Amber" height="100" width="100">
+            <h4 class="text">Amber</h4>
+            <h4 class="four_stars">★★★★✰</h4>
+          </div>
+           <div class= "image-text">
+            <img src="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2FCharacter_Xiangling_Thumb.png?v=1616618587629" alt="Portrait Xiangling" height="100" width="100">
+            <h4 class="text">Xiangling</h4>
+            <h4 class="four_stars">★★★★✰</h4>
+          </div>
+          <div class= "image-text">
+            <img src="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2FCharacter_Xinyan_Thumb.png?v=1616618596766" alt="Portrait Xinyan" height="100" width="100">
+            <h4 class="text">Xinyan</h4>
+            <h4 class="four_stars">★★★★✰</h4>
+          </div>
+        </ul>
+        <div>
+		    <h2 class="text"><img src="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fshow.png?v=1616687020131" alt="Logo Hydro" height="25" width="25">Hydro</h2>
+		    <br>
+		    <ul class = "perso">
+          <div class="image-text">
+            <img src="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2FCharacter_Barbara_Thumb.png?v=1616686546073" alt="Portrait Barbara" height="100" width="100">
+            <h4 class="text">Barbara</h4>
+              
+            
+      </div>
+    </div>
 	</body>
 </html>
