--- a/map.html
+++ b/map.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html content = "text/html" lang="fr-FR">
   <head>
-    <meta content = "text/html; charset = UTF-8" http-equiv = "content-type"/>
-		<meta http-equiv = "langage" content = "fr-FR"/>
+    <meta charset = "UTF-8"/>
 		<meta name= "langage" content = "fr-FR"/>
 		<meta name = "description" content = "exemples javascript"/>
 		<title>Genshin Wiki</title>
@@ -12,72 +11,58 @@
     <link rel = "preconnect" href = "https://fonts.gstatic.com"/>
     <link href = "https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel = "stylesheet"/>
     <link href = "https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400&display=swap" rel = "stylesheet"/>
+    <script src="scripts/size.js"></script>
   </head>
-  <body>
-    <script src = "https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src = "scripts/navigationbar.js"></script>
-    <div>
-      <center>
-        <a href = "index.html"><img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Flogo.png?v=1614543203182" alt = "Logo site" width = "100" height = "50"/></a>
-        <nav class = "navigation_nav">
-          <ul class = "navigation_ul">
-            <button class="navigation_button">🞬</button>
-            <li class = "navigation_list">
-              <a class = "navigation_a" href = "index.html">
-                <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fmaison.png?v=1614543202406" alt = "Logo Accueil"/>Accueil
-              </a>
-            </li>
-            <li class = "navigation_list">
-              <a class = "navigation_a" href = "news.html">
-                <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fplume.png?v=1614543202469" alt = "Logo News"/>News
-              </a>
-            </li>
-            <li class = "navigation_list">
-              <a class = "navigation_a" href = "persolist.html">
-                <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fpersonne.png?v=1614543202455" alt = "Logo Personnages"/>Personnages
-              </a>
-            </li>
-            <li class = "navigation_list">
-              <a class = "navigation_a" href = "tierlist.html">
-                <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fepee.png?v=1614543202643" alt = "Logo Tier List"/>Tier List
-              </a>
-            </li>
-            <li class = "navigation_list">
-              <a class = "navigation_a" href = "map.html">
-                <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2FLocation.png?v=1614543202406" alt = "Logo Map Interactive"/>Map Interactive
-              </a>
-            </li>
-            <li class = "navigation_list">
-              <a class = "navigation_a" href = "aboutus.html">
+  <body onload="setHeight()">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="scripts/navigationbar.js"></script>
+    <div class = "center">
+      <a href = "index.html"><img class = "center" src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Flogo.png?v=1614543203182" alt = "Logo site" width = "100" height = "50"/></a>
+      <nav class = "navigation_nav">
+        <button class="navigation_button">🞬</button>
+        <ul class = "navigation_ul">
+          <li class = "navigation_list">
+            <a class = "navigation_a" href = "index.html">
+              <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fmaison.png?v=1614543202406" alt = "Logo Accueil"/>Accueil
+            </a>
+          </li>
+          <li class = "navigation_list">
+            <a class = "navigation_a" href = "news.html">
+              <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fplume.png?v=1614543202469" alt = "Logo News"/>News
+            </a>
+          </li>
+          <li class = "navigation_list">
+            <a class = "navigation_a" href = "persolist.html">
+              <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fpersonne.png?v=1614543202455" alt = "Logo Personnages"/>Personnages
+            </a>
+          </li>
+          <li class = "navigation_list">
+            <a class = "navigation_a" href = "cristaux.html">
+              <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fepee.png?v=1614543202643" alt = "Logo Cristaux"/>Cristaux              
+            </a>
+          </li>
+          <li class = "navigation_list">
+            <a class = "navigation_a" href = "map.html">
+              <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2FLocation.png?v=1614543202406" alt = "Logo Map Interactive"/>Map Interactive
+            </a>
+          </li>
+          <li class = "navigation_list">
+            <a class = "navigation_a" href = "aboutus.html">
               <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fi.png?v=1614543202406" alt = "Logo A propos"/>A propos
-              </a>
-            </li>
-          </ul>
-        </nav>
-      </center>
+            </a>
+          </li>
+        </ul>
+      </nav>
     </div>
     <div style="background-img: url('https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2F1105694.png?v=1614543205341');"></div>
-    <iframe
-      width="99.9%"
-      height="100%"
-      src="https://webstatic.mihoyo.com/app/ys-map-cn/index.html?bbs_presentation_style=no_header&ts=1606133548270#/map/2?shown_types=&center=2803.84,-1730.74&zoom=-1.30"
-    >
-      Si vous voyez ce message, c'est que votre navigateur ne supporte pas
-      iframe. Cliquez
-      <a
-        class="text_href"
-        href="https://webstatic.mihoyo.com/app/ys-map-cn/index.html?bbs_presentation_style=no_header&ts=1606133548270#/map/2?shown_types=&center=2803.84,-1730.74&zoom=-1.30"
-        >ici</a
-      >
-      pour avoir accès à la map !</iframe
-    >
+    <iframe id = "map" width="99.9%" height= "5px" src="https://webstatic.mihoyo.com/app/ys-map-cn/index.html?bbs_presentation_style=no_header&ts=1606133548270#/map/2?shown_types=&center=2803.84,-1730.74&zoom=-1.30">Si vous voyez ce message, c'est que votre navigateur ne supporte pasiframe. Cliquez
+    <a class="text_href" href="https://webstatic.mihoyo.com/app/ys-map-cn/index.html?bbs_presentation_style=no_header&ts=1606133548270#/map/2?shown_types=&center=2803.84,-1730.74&zoom=-1.30">ici</a>pour avoir accès à la map !</iframe>
     <p class="text">
       <b> Map Officiel de Genshin Impact</b>, accessible par
-      <a
-        class="text_href"
-        href="https://webstatic.mihoyo.com/app/ys-map-cn/index.html?bbs_presentation_style=no_header&ts=1606133548270#/map/2?shown_types=&center=2803.84,-1730.74&zoom=-1.30"
-        >ce lien
-      </a>
+      <a class="text_href" href="https://webstatic.mihoyo.com/app/ys-map-cn/index.html?bbs_presentation_style=no_header&ts=1606133548270#/map/2?shown_types=&center=2803.84,-1730.74&zoom=-1.30">ce lien</a>.
+      La map est en chinois, mais est plus précise. Pour voir la map en Français,
+      <a class="text_href" href="https://www.genshin-impact.fr/map/">cliquez ici</a>
+      .
     </p>
   </body>
 </html>
