--- a/aboutus.html
+++ b/aboutus.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset = "UTF-8"/>
 		<meta name= "langage" content = "fr-FR"/>
-		<meta name = "description" content = "exemples javascript"/>
+		<meta name = "description" content = "Bienvenue sur ce site NON-Officiel de Genshin impact !"/>
+    <meta property="og:image" content="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Ffavicon.png?v=1614796154065">
 		<title>Genshin Wiki</title>
     <link rel = "shortcut icon" type = "image/x-icon" href = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Ffavicon.png?v=1614796154065"/>
     <link rel = "stylesheet" href = "css/style.css"/>
@@ -15,10 +16,10 @@
   <body>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="scripts/navigationbar.js"></script>
-    <div class = "center">
-      <a href = "index.html"><img class = "center" src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Flogo.png?v=1614543203182" alt = "Logo site" width = "100" height = "50"/></a>
+    <header>
+      <a href = "index.html"><img class = "center logobackground" src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Flogo.png?v=1614543203182" alt = "Logo site" width = "100" height = "50"/></a>
       <nav class = "navigation_nav">
-        <button class="navigation_button">🞬</button>
+        <button class="navigation_button">☰</button>
         <ul class = "navigation_ul">
           <li class = "navigation_list">
             <a class = "navigation_a" href = "index.html">
@@ -31,7 +32,7 @@
             </a>
           </li>
           <li class = "navigation_list">
-            <a class = "navigation_a" href = "persolist.html">
+            <a class = "navigation_a" href = "personnages.html">
               <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fpersonne.png?v=1614543202455" alt = "Logo Personnages"/>Personnages
             </a>
           </li>
@@ -52,9 +53,7 @@
           </li>
         </ul>
       </nav>
-    </div>
-    <div
-      style="background-image: url('https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2F1105694.png?v=1614543205341');"
-    ></div>
+    </header>
+    <div style="background-image: url('https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2F1105694.png?v=1614543205341');"></div>
 	</body>
 </html>
