--- a/cristaux.html
+++ b/cristaux.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset = "UTF-8"/>
 		<meta name= "langage" content = "fr-FR"/>
-		<meta name = "description" content = "exemples javascript"/>
+		<meta name = "description" content = "Bienvenue sur ce site NON-Officiel de Genshin impact !"/>
+    <meta property="og:image" content="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Ffavicon.png?v=1614796154065">
 		<title>Genshin Wiki</title>
     <link rel = "shortcut icon" type = "image/x-icon" href = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Ffavicon.png?v=1614796154065"/>
     <link rel = "stylesheet" href = "css/style.css"/>
@@ -15,10 +16,10 @@
   <body>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="scripts/navigationbar.js"></script>
-    <div class = "center">
-      <a href = "index.html"><img class = "center" src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Flogo.png?v=1614543203182" alt = "Logo site" width = "100" height = "50"/></a>
+    <header>
+      <a href = "index.html"><img class = "center logobackground" src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Flogo.png?v=1614543203182" alt = "Logo site" width = "100" height = "50"/></a>
       <nav class = "navigation_nav">
-        <button class="navigation_button">🞬</button>
+        <button class="navigation_button">☰</button>
         <ul class = "navigation_ul">
           <li class = "navigation_list">
             <a class = "navigation_a" href = "index.html">
@@ -31,7 +32,7 @@
             </a>
           </li>
           <li class = "navigation_list">
-            <a class = "navigation_a" href = "persolist.html">
+            <a class = "navigation_a" href = "personnages.html">
               <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fpersonne.png?v=1614543202455" alt = "Logo Personnages"/>Personnages
             </a>
           </li>
@@ -52,9 +53,24 @@
           </li>
         </ul>
       </nav>
+    </header>
+    <div class = "center" style="background-image: url('https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2F1105694.png?v=1614543205341');"></div>
+	  <div>
+      <br>
+      <h1 class = "text decalage">
+        Envie de farm les Cristaux ?
+      </h1>
+      <p class = "text decalage">
+        Utilisez notre formulaire pour vous inscrire et ainsi pouvoir farm avec 4 autres personnes pour un total de plus de 500 cristaux !
+      </p>
+      <br>
+      <form  class = "text decalage" method="post" action="mailto:byxisgeek@gmail.com">
+        Pseudo Discord:  <input placeholder="Pseudo#1234" type="text" size="10" maxlength="40" name="pseudo" required/><br>
+        UUID:  <input placeholder="700000000" type="number" size="9" minlength = "9" maxlength="9" name="uuid" required/><br>
+        Disponibillité: <input type="date" name="date" required/><br><br>
+        Acceptez vous le fait que votre UUID et votre pseudo Discord soit public: <input type="checkbox" name="checkbox" required/><br>
+        <input type="submit" value="Send"/>
+	    </form>
     </div>
-    <div
-      style="background-image: url('https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2F1105694.png?v=1614543205341');"
-    ></div>
-	</body>
+  </body>
 </html>
