--- a/index.html
+++ b/index.html
@@ -3,22 +3,25 @@
   <head>
     <meta charset = "UTF-8"/>
 		<meta name= "langage" content = "fr-FR"/>
-		<meta name = "description" content = "exemples javascript"/>
+		<meta name = "description" content = "Bienvenue sur ce site NON-Officiel de Genshin impact !"/>
+    <meta property="og:image" content="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Ffavicon.png?v=1614796154065">
 		<title>Genshin Wiki</title>
     <link rel = "shortcut icon" type = "image/x-icon" href = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Ffavicon.png?v=1614796154065"/>
     <link rel = "stylesheet" href = "css/style.css"/>
     <link rel = "stylesheet" href = "css/navigationbar.css"/>
+    <link rel = "stylesheet" href = "css/slider.css"/>
     <link rel = "preconnect" href = "https://fonts.gstatic.com"/>
     <link href = "https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel = "stylesheet"/>
     <link href = "https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400&display=swap" rel = "stylesheet"/>
+    <script src="scripts/butin.js"></script>
   </head>
-  <body>
+  <body onload="setButin()">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="scripts/navigationbar.js"></script>
-    <div class = "center">
-      <a href = "index.html"><img class = "center" src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Flogo.png?v=1614543203182" alt = "Logo site" width = "100" height = "50"/></a>
+    <header>
+      <a href = "index.html"><img class = "center logobackground" src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Flogo.png?v=1614543203182" alt = "Logo site" width = "100" height = "50"/></a>
       <nav class = "navigation_nav">
-        <button class="navigation_button">🞬</button>
+        <button class="navigation_button">☰</button>
         <ul class = "navigation_ul">
           <li class = "navigation_list">
             <a class = "navigation_a" href = "index.html">
@@ -31,7 +34,7 @@
             </a>
           </li>
           <li class = "navigation_list">
-            <a class = "navigation_a" href = "persolist.html">
+            <a class = "navigation_a" href = "personnages.html">
               <img src = "https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fpersonne.png?v=1614543202455" alt = "Logo Personnages"/>Personnages
             </a>
           </li>
@@ -52,8 +55,8 @@
           </li>
         </ul>
       </nav>
-    </div>
-    <div class = "decalage">
+    </header>
+    <div class = "decalage no_pointer">
       <br>
       <p class="text">
         Bienvenue sur ce site <b>fan</b> de Genshin Impact ! Vous trouverez ici de
@@ -61,8 +64,58 @@
         la communautée. Nous ne sommes en aucun cas affilié à Genshin impact.       
       </p>
       <br>
+    </div>
+    <h2 class = "decalage text flex">
+      Nous sommes <a id = "today" class = "text flex"></a>, allez sur la slide n°<a id = "today-nbr" class = "text"></a> - 
+    </h2>
+    <div class=" decalage slider">
+      <div class="slides">
+        <input type="radio" name="radio-btn" id ="radio1">
+        <input type="radio" name="radio-btn" id ="radio2">
+        <input type="radio" name="radio-btn" id ="radio3">
+        <input type="radio" name="radio-btn" id ="radio4">
+        <div class = "slide first">
+          <img src="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Flundi-jeudi.png?v=1617026962101" alt="Butin Lundi Jeudi">
+        </div>
+        <div class="slide">
+          <img src="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fmardi-vendredi.png?v=1617026962345" alt="Butin Mardi Vendredi">
+        </div>
+        <div class="slide">
+          <img src="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fmercredi-samedi.png?v=1617026961735" alt="Butin Mercredi Samedi">
+        </div>
+        <div class="slide">
+          <img src="https://cdn.glitch.com/8205340f-68bd-425a-a851-d99220a6d9ee%2Fdimanche.png?v=1617026961889" alt="Butin Dimanche">
+        </div>
+      </div>
+      <div class = "navigation-manual">
+        <label for="radio1" class="manual-btn"></label>
+        <label for="radio2" class="manual-btn"></label>
+        <label for="radio3" class="manual-btn"></label>
+        <label for="radio4" class="manual-btn"></label>
+      </div>
+    </div>
+    <div class = "decalage no_pointer">
       <h2 class="text">Nouveautés du site</h2>
       <ul>
+        <li class = "list">
+          <p class="text">
+            27/03 - Ajout d'un bouton pour interchanger les maps (Chinois/Français)
+          </p>
+        </li>
+        <li class = "list">
+          <p class="text">
+            27/03 - Ajout du butin obtenable quotidient dans l'accueil
+          </p>
+        <li class = "list">
+          <p class="text">
+            25/03 - Ajout de contenu dans la catégorie Cristaux
+          </p>
+        </li>
+        <li class = "list">
+          <p class="text">
+            25/03 - Ajout des personnages sur la catégorie Personnage
+          </p>
+        </li>
         <li class = "list">
           <p class="text">
             22/03 - Remplacement de la partie Tier List par Cristaux
